// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Component [1] should render basic component 1`] = `
<a
  download={true}
  href="https://www.facebook.com/"
  target="_blank"
>
  <div>
    <span
      className="be-icon-spinner"
    />
  </div>
  <div>
    <span
      className="be-icon-file-drop"
    />
  </div>
  <div>
    https://www.facebook.com/
  </div>
  <div>
    <span
      className="be-icon-download-1"
    />
  </div>
</a>
`;

exports[`File Component [2] should render basic component 1`] = `
<StandaloneImage
  mimeType="image/jpeg"
  src="http://via.placeholder.com/350x150"
/>
`;

exports[`File Component [3] should render basic component 1`] = `
<Image
  mimeType="image/jpeg"
  src="http://via.placeholder.com/350x150"
/>
`;

exports[`File Component [4] should render basic component 1`] = `
<Video
  mimeType="video/mp4"
  title="https://www.w3schools.com/tags/movie.mp4"
  url="https://www.w3schools.com/tags/movie.mp4"
/>
`;
